frontend/src/styles/components/_footer.scss
$footer-breakpoint-fullSize: 39em; // like $header-breakpoint-navigationHiddenToVisible
$footer-breakpoint-fullSize-until: "max-width: " + $footer-breakpoint-fullSize;
$footer-breakpoint-fullSize-from: "min-width: " + ($footer-breakpoint-fullSize + 0.001);


.footer-wrapper {
	background-color: $colors-tinge;
	position: relative;
	padding: vr-unit(2) vr-unit(1);
}
.footer {
	max-width: 28em;
	margin-inline: auto;

	&-navigation {
		margin-bottom: vr-unit(1);

		@media ($footer-breakpoint-fullSize-from) {
			display: flex;
			justify-content: space-between;
			align-items: flex-start;
			column-gap: vr-unit(0.5);
			margin-bottom: vr-unit(2);
		}

		.menu,
		&-main {
			& > .menu-item,
			&-item {
				@media ($footer-breakpoint-fullSize-until) {
					text-align: center;
				}

				& > a,
				&-link {
					display: inline-block;
					padding: 0.3em 0 0.15em;
					color: $colors-text;
					text-decoration: none;
					transition: color 200ms linear;

					&:hover {
						color: $colors-emphasizing;
					}
				}
				&.current-menu-item > a,
				&.active > a,
				&-link--active {
					color: $colors-default-background !important; // overwrite default hover behaviour
					position: relative;
					isolation: isolate;

					&::before {
						content: "";
						position: absolute;
						z-index: -1;
						background-color: $colors-emphasizing;
						width: calc(100% + #{vr-unit(1)});
						height: 100%;
						border-radius: 2em;
						transform: translate(calc(#{vr-unit(0.5)} * -1), -0.3em);
						transition: background-color 200ms linear;
					}
					&:hover::before {
						background-color: darken($colors-emphasizing, 10);
					}
				}
			}
		}
	}

	&__bottom {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: vr-unit(0.5);

		@media ($footer-breakpoint-fullSize-from) {
			flex-direction: row;
			justify-content: space-between;
			gap: vr-unit(1);
		}
	}

	&__logo,
	&__searchForm {
		@media ($footer-breakpoint-fullSize-from) {
			flex-basis: 50%;
		}
	}

	&__logo {
		display: block;
		max-height: 3rem;
		aspect-ratio: 4/1;
		background-image: url("../images/logo-hb-looking-left.svg");
		background-size: auto 100%;
		background-position: left center;
		background-repeat: no-repeat;
	}

	&__searchForm {
		max-inline-size: 20rem;
	}
}

